# quality_control_room

./: .gitignore  BUILD_INSTRUCTIONS.md  LICENSE  LIGHTTPD_SETUP.md  README.md
data/: config.json  metrics-old.csv  metrics-old1.csv  metrics-old2.csv  metrics.csv  xtest.txt  ytest.txt
doc/: tech_doc.md  under_contruction  xgbwrapper.md
engine/: .gitignore  Cargo.toml
engine/models/: Cargo.toml  build.rs
engine/models/src/: main.rs  train.rs  wrapper.rs
engine/quality_server/: Cargo.toml
engine/quality_server/src/: api.rs  main.rs
engine/server/: Cargo.toml  build.rs
engine/server/src/: api.rs  main.rs
engine/tests/: Cargo.toml
engine/tests/src/: lib.rs  test_models.rs  test_server.rs
engineer/: Cargo.toml  SETUP.md
engineer/src/: chat.rs  main.rs  ollama.rs
models/: Cargo.toml
models/src/: main.rs
models/tests/: Cargo.toml
models/tests/src/: lib.rs
models/train/: Cargo.toml  build.rs
models/train/src/: lib.rs  main.rs  train.rs  wrapper.rs
models_gen/: Cargo.toml  THEORY.md  build.rs  config.yaml  config_test.yaml
models_gen/src/: config.rs  datagen.rs  main.rs  metrics.rs  xgb.rs
py/: normal.ipynb
server/: Cargo.toml  build.rs  config.yaml  run.sh  server.md
server/src/: api.rs  config.rs  lib.rs  main.rs  stats.rs  xgb.rs
server/src/api/: analyze.rs  curves.rs  histogram.rs  mod.rs  state.rs  types.rs
systemd/: quality-engine.service  virtual-engineer.service
train_models/: Cargo.toml
train_models/src/: main.rs
ui/: .env.development  .env.production  index.html  package-lock.json  package.json  run.sh  tailwind.config.js  vite.config.js
ui/public/: help.md  help.txt
ui/src/: App.vue  main.js  style.css
ui/src/components/: Dashboard.vue  VirtualEngineer.vue
ui/src/components/beta_tool/: BetaTool.vue  Cdf.vue  ChiSquared.vue  DistributionParams.vue  Freq.vue  Inputs.vue  Params.vue  Pdf.vue  SidebarResults.vue
ui/src/components/defects_rate/: DefectsRate.vue  Results.vue  SidebarResults.vue
ui/src/components/normal_tool/: NormalTool.vue  SidebarResults.vue
ui/src/components/quality_profile/: QualityProfile.vue  Results.vue  SidebarResults.vue
ui/src/composables/: index.js  useChart.js
ui/src/locales/: en-us.json  pt-br.json
ui/src/router/: index.js
ui/src/services/: api.js  i18n.js  websocketService.js
ui/src/store/: analysis.js  index.js  language.js  settings.js  sidebar.js  theme.js
ui/src/utils/: export.js  index.js  validation.js
ui/src/views/: About.vue  Help.vue  Home.vue
vscode_ext/: CHANGELOG.md  README.md  package-lock.json  package.json  tasks-launcher-0.0.1.vsix
vscode_ext/src/: extension.ts
xgbwrapper/: CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  config.json  install.sh
xgbwrapper/src/: xgbwrapper.c  xgbwrapper.h
xgbwrapper/tests/: test_xgbwrapper.c  test_xgbwrapper.h
