[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Quality Control Room WebSocket API server"
authors = ["vp"]

[dependencies]
# Web framework (axum + axum-server for TLS)
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1.43", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Statistics and distributions
statrs = "0.18"
rand = "0.8"
nlopt = "0.6"

# Configuration
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "libserver"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
