[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models", package = "models" }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1.0.134"

[lib]
name = "libserver"
path = "src/lib.rs"
