[package]
name = "server"
version = "1.0.3"
edition = "2021"

[dependencies]
models = { path = "../models", package = "models" }
warp =  { version = "0.3", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1.0.134"

[lib]
name = "libserver"
path = "src/lib.rs"
